Fixed response issues I had with nav bar links. This cleaned up other minor spacing issues.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,14 +185,13 @@ label {
 
 /* Responsive adjustments */
 
-@media all and (max-width: 958px) {
+@media all and (max-width: 980px) {
     .wrapper {
         width: 100%;
     }
     .inside-wrapper {
         width: 90%;
     }
-
     header {
         width: 100%;
     } 
@@ -201,7 +200,7 @@ label {
     }
 }
 
-@media all and (max-width: 794px) {
+@media all and (max-width: 768px) {
     .wrapper-slim {
         width: 100%;
     }
@@ -209,17 +208,16 @@ label {
         width: 100%;
     }
     #horizontal-bar-2 {
-        width 90%;
+        width: 90%;
     }
 }
 
-
-@media all and (max-width: 446px) {
+@media all and (max-width: 640px) {
     main {
         width: 100%
     }
     .wrapper {
-        width 100%;
+        width: 100%;
     }
     .inside-wrapper{
         width: 100%;
@@ -235,21 +233,47 @@ label {
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 40%;
+        width: 30%;
         float: none;
         padding-left: 10px;
         padding-right: 10px;
         padding-top: 10px
     }
     #horizontal-bar-2 {
-        width 90%;
+        width: 90%;
     }
     nav ul li {
         margin-top: 25px;
         padding-right: 2px;
         list-style: none;
     }
+}
 
+@media all and (max-width: 640px) {
+    nav {
+        margin-top: 36px;
+    }
+
+    p {
+        font-size: 18px;
+        padd
+    }
+}
+
+@media all and (max-width: 462px) {
+    #headshot {
+        margin-top: 60px;
+    }
+    nav {
+        margin-right: 75px;
+    }
+    p {
+        font-size: 18px;
+        padding: 12px;
+    }
+    #gallery {
+        padding-top: 30;
+    }
 
    
 
